<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.erp.mental_arithmetic.MainActivity"
    android:background="#fdfdfe">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/heading"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80dp"
        android:text="0"
        android:textIsSelectable="false"
        android:id="@+id/textSumP"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EasyLevel"
        android:id="@+id/buttonEasy"
        android:layout_below="@+id/textSumP"
        android:layout_marginTop="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickEasy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorEasy"
        android:textSize="18dp"
        android:textColor="#fdfdfe" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MediumLevel"
        android:id="@+id/buttonMedium"
        android:layout_below="@+id/buttonEasy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickMedium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorMedium"
        android:textSize="18dp"
        android:textColor="#fdfdfe" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HardLevel"
        android:id="@+id/buttonHard"
        android:layout_below="@+id/buttonMedium"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClickHard"
        android:layout_alignParentStart="true"
        android:background="@color/colorHard"
        android:textSize="18dp"
        android:textColor="#fdfdfe" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:id="@+id/buttonSetting"
        android:layout_below="@+id/buttonHard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickSettings"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSettings"
        android:textSize="18dp"
        android:textColor="@color/colorHard" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageButton"
        android:onClick="onClickInfo"
        android:background="@drawable/info1"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ChangeLevel"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/buttonEasy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-35dp"
        android:textSize="23dp" />

</RelativeLayout>
